<resources>
    <string name="app_name">thato_s_application3</string>
    <string name="loading">Loading...</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_jun">Jun</string>
    <string name="lbl_this_weekend">This Weekend</string>
    <string name="lbl_thu">Thu</string>
    <string name="lbl_r18_35">-R18.35</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_march">March</string>
    <string name="lbl_change_password2">Change password</string>
    <string name="lbl_total_expense">Total Expense</string>
    <string name="lbl_14_16_july_5">14:16 - July 5</string>
    <string name="lbl_email_address">email address</string>
    <string name="lbl_travel_deposit">Travel deposit</string>
    <string name="lbl_my_goals2">My Goals</string>
    <string name="lbl_reset_password">Reset password?</string>
    <string name="msg_revenue_last_week">Revenue Last Week</string>
    <string name="lbl_date_of_birth">Date of birth</string>
    <string name="msg_don_t_have_an_account">Don\u2019t have an account? Sign Up</string>
    <string name="msg_password_has_been">Password Has been Changed successfully</string>
    <string name="lbl_80k">80k</string>
    <string name="msg_current_password">Current Password</string>
    <string name="lbl_new_password">New password</string>
    <string name="lbl_5k">5k</string>
    <string name="lbl_calender">Calender</string>
    <string name="lbl_delivery_pizza">Delivery Pizza</string>
    <string name="lbl_r26_002">R26.00</string>
    <string name="lbl_50">50%</string>
    <string name="lbl_transport">Transport</string>
    <string name="lbl_19_56_april_5">19:56 - April 5</string>
    <string name="lbl_r20_000_20">R20,000.20</string>
    <string name="msg_username_or_email">Username or email</string>
    <string name="msg_enter_email_address">Enter email address</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_sun">Sun</string>
    <string name="lbl_44_555_5555_55">+44 555 5555 55</string>
    <string name="lbl_april_30_20243">April 30,2024</string>
    <string name="lbl_april_30_20242">April 30,2024</string>
    <string name="lbl_r477_77">r477.77</string>
    <string name="lbl_r85_94">R85.94</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_40">40%</string>
    <string name="lbl_fuel">Fuel</string>
    <string name="lbl_r26_00">-R26.00</string>
    <string name="lbl_r122_99">R122.99</string>
    <string name="lbl_amount">Amount</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_10k">10k</string>
    <string name="lbl_r70_40">-R70.40</string>
    <string name="msg_example_example_com">example@example.com</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_apr">Apr</string>
    <string name="lbl_1k">1k</string>
    <string name="lbl_30">30%</string>
    <string name="lbl_31">31</string>
    <string name="msg_password_has_been2">Password Has been </string>
    <string name="lbl_password">Password</string>
    <string name="lbl_yesterday">Yesterday</string>
    <string name="lbl_r387_32">R387.32</string>
    <string name="msg_30_of_your_expenses">30% of your expenses, looks good!</string>
    <string name="lbl_jan">Jan</string>
    <string name="lbl_new_category">New Category</string>
    <string name="msg_please_enter_your">Please enter your password to confirm deletion of your account.</string>
    <string name="lbl_groceries">Groceries</string>
    <string name="lbl_r250_00">R250.00</string>
    <string name="lbl_r120_00">r120,00</string>
    <string name="msg_yes_delete_account">yes, Delete account</string>
    <string name="msg_use_fingerprint">Use fingerprint to Log In</string>
    <string name="lbl_r4_120_00">R4,120.00</string>
    <string name="lbl_delete_account2">Delete account</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_r12_13">-R12.13</string>
    <string name="lbl_r1_962_93">R1,962.93</string>
    <string name="lbl_analysis">Analysis</string>
    <string name="msg_john_fingerprint2">John fingerprint </string>
    <string name="lbl_r100_00">-R100.00</string>
    <string name="lbl_60k">60k</string>
    <string name="msg_fingerprint_has">fingerprint Has been successfully added</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_r11_420_00">R11,420.00</string>
    <string name="msg_we_recommend_that">We recommend that you be more attentive to your finances.</string>
    <string name="lbl_expense_title">Expense Title</string>
    <string name="lbl_savings">Savings</string>
    <string name="lbl_log_in">Log In</string>
    <string name="lbl_change_password">Change Password</string>
    <string name="lbl_transaction">Transaction</string>
    <string name="lbl_setting">Setting</string>
    <string name="msg_expense_reminder">Expense Reminder </string>
    <string name="msg_place_your_finger">Place Your Finger</string>
    <string name="msg_19_56_april_30">19:56 - April 30</string>
    <string name="lbl_yes">yes</string>
    <string name="lbl_july_5_2024">July 5, 2024</string>
    <string name="lbl_10">10%</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="msg_lorem_ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="lbl_11">11%</string>
    <string name="lbl_15">15%</string>
    <string name="msg_general_notification">General Notification</string>
    <string name="lbl_new_password2">New Password</string>
    <string name="msg_don_t_have_an_account2">Don\u2019t have an account? </string>
    <string name="lbl_save">Save</string>
    <string name="lbl_r217_77">R217.77</string>
    <string name="msg_are_you_sure_you2">Are you sure you want to Proceed?</string>
    <string name="msg_are_you_sure_you3">Are you sure you want to log out?</string>
    <string name="lbl_dd_mm_yyy">DD/MM/YYY</string>
    <string name="lbl_r596_25">r596.25</string>
    <string name="msg_by_deleting_your">By deleting your account, you agree that you understand the consequences of this action and that you agree to permanently delete your account and all associated data.</string>
    <string name="lbl_15k">15k</string>
    <string name="msg_add_a_fingerprint">Add a fingerprint</string>
    <string name="lbl_or_sign_in_with">or sign in with</string>
    <string name="lbl_r217_772">r217.77</string>
    <string name="msg_18_39_march_31">18:39 - March 31</string>
    <string name="lbl_change_language">Change Language</string>
    <string name="msg_20_50_march_31">20:50 - March 31</string>
    <string name="lbl_security">Security</string>
    <string name="lbl_r430_560_00">R430,560.00</string>
    <string name="lbl_payments">Payments</string>
    <string name="lbl_add_fingerprint">Add Fingerprint</string>
    <string name="lbl_pantry">Pantry</string>
    <string name="lbl_brunch">Brunch</string>
    <string name="lbl_r45_04">r45.04</string>
    <string name="lbl_more">More</string>
    <string name="msg_confirm_new_password">Confirm New Password</string>
    <string name="lbl_settings">Settings</string>
    <string name="msg_food_dinner">Food | Dinner | -r70,40</string>
    <string name="lbl_r27_20">-R27.20</string>
    <string name="lbl_enter_details">Enter Details</string>
    <string name="lbl_8_30_april_15">8:30 - April 15</string>
    <string name="lbl_add_expenses">Add Expenses</string>
    <string name="lbl_r1_187_40">-R1,187.40</string>
    <string name="lbl_rent">Rent</string>
    <string name="lbl_feb">Feb</string>
    <string name="lbl_14_25_may_05">14:25 - May 05</string>
    <string name="lbl_use">Use </string>
    <string name="lbl_next">Next</string>
    <string name="lbl_write">Type...</string>
    <string name="lbl_2nd_week">2nd Week</string>
    <string name="lbl_vibrate">Vibrate</string>
    <string name="lbl_transactions">Transactions</string>
    <string name="lbl_enter_details2">Enter details</string>
    <string name="lbl_phone">phone</string>
    <string name="lbl_salary">Salary</string>
    <string name="lbl_r102_67">r102.67</string>
    <string name="msg_already_have_an">Already have an account? Log In</string>
    <string name="lbl_lunch">Lunch</string>
    <string name="msg_confirm_password">Confirm Password</string>
    <string name="lbl_april_30_2024">April 30, 2024</string>
    <string name="msg_are_you_sure_you">Are you sure you want to delete your account?</string>
    <string name="lbl_r15_40">-R15.40</string>
    <string name="lbl_goal">Goal</string>
    <string name="lbl_r653_31">R653.31</string>
    <string name="lbl_r40_13">-R40.13</string>
    <string name="lbl_may">May</string>
    <string name="lbl_dinner">Dinner</string>
    <string name="lbl_end_session">End session</string>
    <string name="msg_set_up_your_automatic">Set up your automatic savings to meet your savings goal...</string>
    <string name="lbl_21_45_may_30">21:45 - May 30</string>
    <string name="lbl_18_27_nov_30">18:27 - nov 30</string>
    <string name="lbl_new_house">New House</string>
    <string name="msg_transaction_update">Transaction Update</string>
    <string name="lbl_reminder">Reminder!</string>
    <string name="msg_18_27_april_30">18:27 - April 30</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_mar">Mar</string>
    <string name="msg_savings_on_goals">Savings on goals</string>
    <string name="lbl_expense">Expense</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_wed">Wed</string>
    <string name="lbl_monthly">Monthly</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_r569_200_00">R569,200.00</string>
    <string name="lbl_100k">100k</string>
    <string name="lbl_new_update">New update</string>
    <string name="lbl_weekly">Weekly</string>
    <string name="lbl_r7_783_00">R7,783.00</string>
    <string name="lbl_spends">Spends</string>
    <string name="msg_enter_description">Enter description</string>
    <string name="lbl_r4_000_00">R4,000.00</string>
    <string name="lbl_4th_week">4th Week</string>
    <string name="lbl_john_smith">John Smith</string>
    <string name="lbl_food_last_week">Food Last Week</string>
    <string name="lbl_income">Income</string>
    <string name="lbl_14_390">$14,390 </string>
    <string name="lbl_gifts">Gifts</string>
    <string name="lbl_2023">2023</string>
    <string name="lbl_2022">2022</string>
    <string name="lbl_2021">2021</string>
    <string name="lbl_my_goals">My goals</string>
    <string name="lbl_2020">2020</string>
    <string name="msg_already_have_an2">Already have an account? </string>
    <string name="lbl_50k">50k</string>
    <string name="lbl_april">April</string>
    <string name="lbl_total_balance">Total Balance</string>
    <string name="lbl_house">House</string>
    <string name="msg_select_the_category">Select the category</string>
    <string name="lbl_edit_my_profile">Edit my Profile</string>
    <string name="lbl_fri">Fri</string>
    <string name="lbl_r320_300_00">R320,300.00</string>
    <string name="msg_40_already_looking">40% Already, looking good!</string>
    <string name="lbl_2019">2019</string>
    <string name="lbl_r100_002">-R100,00</string>
    <string name="msg_19_30_march_31">19:30 - March 31</string>
    <string name="lbl_edit_expenses">edit Expenses</string>
    <string name="msg_account_settings">Account settings</string>
    <string name="lbl_update_profile">Update Profile</string>
    <string name="msg_17_00_april_24">17:00 - April 24</string>
    <string name="lbl_mon">Mon</string>
    <string name="msg_15_00_april_24">15:00 - April 24</string>
    <string name="lbl_r625_48">R625.48</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="msg_yes_end_session">Yes, end session</string>
</resources>