<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:id="@+id/linear31ALogin"
        style="@style/groupStyledeep_orange_400"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtForgotpassword"
            style="@style/txtPoppinssemibold30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="15dp"
            android:singleLine="true"
            android:text="@string/lbl_forgot_password"
            tools:text="@string/lbl_forgot_password" />

        <LinearLayout
            android:id="@+id/linearColumnresetpass"
            style="@style/groupStylewhite_A700cornerRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="49dp"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingStart="34dp"
            android:paddingTop="85dp"
            android:paddingEnd="34dp"
            android:paddingBottom="85dp">

            <TextView
                android:id="@+id/txtResetpassword"
                style="@style/txtPoppinssemibold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lineSpacingExtra="10dp"
                android:singleLine="true"
                android:text="@string/lbl_reset_password"
                tools:text="@string/lbl_reset_password" />

            <TextView
                android:id="@+id/txtDescription"
                style="@style/txtLeagueSpartanregular14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/msg_lorem_ipsum_dolor"
                tools:text="@string/msg_lorem_ipsum_dolor" />

            <TextView
                android:id="@+id/txtEnteremail"
                style="@style/txtPoppinsmedium15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="79dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/msg_enter_email_address"
                tools:text="@string/msg_enter_email_address" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/etSolidRounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rectangle_bg_red_50_radius_18"
                android:ellipsize="end"
                android:hint="@string/msg_example_example_com"
                android:inputType="text"
                android:lineSpacingExtra="8dp"
                android:paddingStart="19dp"
                android:paddingTop="8dp"
                android:paddingEnd="19dp"
                android:paddingBottom="8dp"
                android:singleLine="true"
                android:textColorHint="@color/blue_gray_900_83"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                style="@style/btnSolidRounded_2"
                android:layout_width="169dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="44dp"
                android:ellipsize="end"
                android:gravity="center"
                android:lineSpacingExtra="10dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:singleLine="true"
                android:text="@string/lbl_next"
                android:textAllCaps="false"
                tools:text="@string/lbl_next" />

            <View
                android:id="@+id/viewView"
                android:layout_width="165dp"
                android:layout_height="259dp" />

            <TextView
                android:id="@+id/txtConfirmation"
                style="@style/txtLeagueSpartanlight13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:lineSpacingExtra="1dp"
                android:singleLine="true"
                android:text="@string/msg_don_t_have_an_account"
                tools:text="@string/msg_don_t_have_an_account" />
            </LinearLayout>
    </LinearLayout>
</layout>