<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:id="@+id/linear30ALogin"
        style="@style/groupStyledeep_orange_400"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtWelcome"
            style="@style/txtPoppinssemibold30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="56dp"
            android:ellipsize="end"
            android:lineSpacingExtra="15dp"
            android:singleLine="true"
            android:text="@string/lbl_welcome"
            tools:text="@string/lbl_welcome" />

        <LinearLayout
            android:id="@+id/linearColumnusernameo"
            style="@style/groupStylewhite_A700cornerRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="53dp"
            android:orientation="vertical"
            android:paddingStart="36dp"
            android:paddingTop="89dp"
            android:paddingEnd="36dp"
            android:paddingBottom="89dp">

            <TextView
                android:id="@+id/txtUsernameor"
                style="@style/txtPoppinsmedium15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/msg_username_or_email"
                tools:text="@string/msg_username_or_email" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/etSolidRounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rectangle_bg_red_50_radius_18"
                android:ellipsize="end"
                android:hint="@string/msg_example_example_com"
                android:inputType="text"
                android:lineSpacingExtra="8dp"
                android:paddingStart="30dp"
                android:paddingTop="8dp"
                android:paddingEnd="30dp"
                android:paddingBottom="8dp"
                android:singleLine="true"
                android:textColorHint="@color/blue_gray_900_83"
                tools:ignore="Autofill" />

            <LinearLayout
                android:id="@+id/linearColumnpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPassword"
                    style="@style/txtPoppinsmedium15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_password"
                    tools:text="@string/lbl_password" />

                <EditText
                    android:id="@+id/etEdittext"
                    style="@style/etSolidRounded_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/rectangle_bg_red_50_radius_18"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:singleLine="true"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogIn"
                style="@style/btnSolidRounded"
                android:layout_width="207dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="91dp"
                android:ellipsize="end"
                android:gravity="center"
                android:lineSpacingExtra="10dp"
                android:paddingStart="30dp"
                android:paddingTop="5dp"
                android:paddingEnd="30dp"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:text="@string/lbl_log_in"
                android:textAllCaps="false"
                tools:text="@string/lbl_log_in" />

            <TextView
                android:id="@+id/txtForgotpassword"
                style="@style/txtLeagueSpartansemibold14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="19dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/msg_forgot_password"
                tools:text="@string/msg_forgot_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                style="@style/btnSolidRounded_1"
                android:layout_width="207dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:ellipsize="end"
                android:gravity="center"
                android:lineSpacingExtra="10dp"
                android:paddingStart="30dp"
                android:paddingTop="6dp"
                android:paddingEnd="30dp"
                android:paddingBottom="6dp"
                android:singleLine="true"
                android:text="@string/lbl_sign_up"
                android:textAllCaps="false"
                tools:text="@string/lbl_sign_up" />

            <TextView
                android:id="@+id/txtUsefingerprint"
                style="@style/txtPoppinssemibold14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:ellipsize="end"
                android:lineSpacingExtra="7dp"
                android:singleLine="true"
                android:text="@string/msg_use_fingerprint"
                tools:text="@string/msg_use_fingerprint" />

            <TextView
                android:id="@+id/txtorsigninwith"
                style="@style/txtLeagueSpartanlight13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="29dp"
                android:ellipsize="end"
                android:lineSpacingExtra="1dp"
                android:singleLine="true"
                android:text="@string/lbl_or_sign_in_with"
                tools:text="@string/lbl_or_sign_in_with" />

            <ImageButton
                android:id="@+id/btnSearchOne"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/rectangle_border_teal_900"
                android:scaleType="fitCenter"
                android:src="@drawable/img_search"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>
</layout>