<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:id="@+id/linear953FDelete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearColumndeleteacc"
            style="@style/groupStylewhite_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:orientation="vertical"
            android:paddingStart="33dp"
            android:paddingTop="41dp"
            android:paddingEnd="33dp"
            android:paddingBottom="41dp">

            <TextView
                android:id="@+id/txtDeleteaccount"
                style="@style/txtPoppinsbold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_delete_account2"
                tools:text="@string/lbl_delete_account2" />

            <TextView
                android:id="@+id/txtConfirmation"
                style="@style/txtPoppinsmedium15_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/msg_are_you_sure_you2"
                tools:text="@string/msg_are_you_sure_you2" />

            <TextView
                android:id="@+id/txtDescription"
                style="@style/txtLeagueSpartanregular17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center_horizontal"
                android:text="@string/msg_by_deleting_your"
                tools:text="@string/msg_by_deleting_your" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnYes"
                style="@style/btnSolidRounded_9"
                android:layout_width="218dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="28dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="27dp"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="@string/lbl_yes"
                android:textAllCaps="false"
                tools:text="@string/lbl_yes" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/btnSolidRounded_6"
                android:layout_width="218dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="28dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="27dp"
                android:layout_marginBottom="3dp"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="@string/lbl_cancel"
                android:textAllCaps="false"
                tools:text="@string/lbl_cancel" />
        </LinearLayout>
    </LinearLayout>
</layout>